--- a/random-variables.Rmd
+++ b/random-variables.Rmd
@@ -100,6 +100,8 @@ Alice and Bob need to know the _probabilities_, such as
 
 ## Theory {-}
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eOkqx5aa3Kc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 We describe random variables (such as the number of diamonds or the number of jacks) by the 
 probabilities of their possible values. This is summarized by a function called the 
 **probability mass function**.
