--- a/replacement.Rmd
+++ b/replacement.Rmd
@@ -37,7 +37,7 @@ _if you ignore the order in which the tickets were drawn_.
 They also showed that there are 6 ways to get a sum of 10. Why does this not 
 guarantee the probabilities of the two events are the same?
 
-Notice that this case (draws with replacement, where order doesn't matter) is one that 
+Notice that this case (draws with replacement, order doesn't matter) is one that 
 we have not studied yet.
 
 |                    | with replacement | without replacement |
@@ -45,9 +45,9 @@ we have not studied yet.
 |       order matters|       $N^n$      |$\frac{N!}{(N-n)!}$ |
 |order doesn't matter|        ???       | $\binom{N}{n} = \frac{N!}{n!(N-n)!}$  |
 
-To settle the question, we have to go back to counting outcomes where order matters.
+To settle the question, let's go back to counting ordered outcomes.
 
-- The outcome $2 + 3 + 4$ corresponds to $3! = 6$ outcomes, when you count the different possible orderings:
+- The outcome $2 + 3 + 4$ corresponds to $3! = 6$ outcomes, when you account for the possible orderings:
     - $2 + 3 + 4$
     - $2 + 4 + 3$
     - $3 + 2 + 4$
@@ -61,13 +61,13 @@ To settle the question, we have to go back to counting outcomes where order matt
 - And the outcome $3 + 3 + 3$ only has one possible ordering.
 
 In other words, when we draw with replacement, the same ticket can be drawn more than once, and 
-repetitions reduce the number of ways the tickets can be reordered. The problem with 
+repetitions reduce the number of ways that tickets can be reordered. The problem with 
 simply counting the number of outcomes is that the 6 outcomes 
 \begin{align*}
 3 + 3 + 3 & & 2 + 3 + 4 & & 2 + 2 + 5 & & 1 + 4 + 4 & & 1 + 3 + 5 & & 1 + 2 + 6
 \end{align*}
-are not all equally likely. $2 + 3 + 4$ is actually twice as likely as $2 + 2 + 5$ and 
-six times as likely as $3 + 3 + 3$. When drawing with replacement, only the ordered outcomes 
+are not all equally likely. $2 + 3 + 4$ is twice as likely as $2 + 2 + 5$ and 
+six times as likely as $3 + 3 + 3$. When draws are made with replacement, only ordered outcomes 
 are equally likely.
 
 This was Galileo's insight. When he took into account the number of possible orderings associated 
@@ -87,6 +87,8 @@ with each unordered outcome:
 \end{array}
 he found that the probability of a 9 was actually 
 \[ \frac{25}{216}. \]
+(Remember that there are $6^3 = 216$ equally likely outcomes when order matters.)
+
 Repeating the calculation for the probability of a 10, Galileo showed that the two 
 probabilities were indeed different.
 
